@@ -161,9 +161,7 @@ QuantLib::Compounding getCompounding(const double n);
 QuantLib::BusinessDayConvention getBusinessDayConvention(const double n);
 QuantLib::DayCounter getDayCounter(const double n);
 QuantLib::DateGeneration::Rule getDateGenerationRule(const double n);
-boost::shared_ptr<QuantLib::YieldTermStructure> buildTermStructure(SEXP params,
-                                                                   SEXP tsQuotes,
-                                                                   SEXP times);
+boost::shared_ptr<QuantLib::YieldTermStructure> buildTermStructure(Rcpp::List params, Rcpp::List);
 QuantLib::Schedule getSchedule(SEXP sch);
 boost::shared_ptr<QuantLib::IborIndex> getIborIndex(SEXP index, const QuantLib::Date today);
 std::vector<double> getDoubleVector(SEXP vector);
